# qt_monitor_system

./: .gitignore  CMakeLists.txt  main.cpp  src.qrc
camera/: camera.h
view/: mainview.cpp  mainview.h  mainview.ui
